--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2937,8 +2937,6 @@
 	}
 
 	#header {
-		background: #444;
-		color: #bbb;
 		cursor: default;
 		height: 3.25em;
 		left: 0;
@@ -3006,7 +3004,7 @@
 					}
 
 						#header nav > ul > li a:not(.button).icon:before {
-							color: #999;
+							color: #0e6405;
 							margin-right: 0.5em;
 						}
 
@@ -3076,7 +3074,7 @@
 		}
 
 			#header.alt nav > ul > li a:not(.button).icon:before {
-				color: rgba(255, 255, 255, 0.75);
+				color:#0e6405;
 			}
 
 			#header.alt nav > ul > li.active a:not(.button) {
@@ -3135,7 +3133,7 @@
 			}
 
 			.dropotron li.active > a, .dropotron li.active > span, .dropotron li:hover > a, .dropotron li:hover > span {
-				background: #e89980;
+				background: #84C873;
 				color: #ffffff;
 			}
 
