--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4095,7 +4095,7 @@ body.landing #main {
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
-	background-color: #fff;
+	background-color: #374859;
 	color: #fff;
 	font-size: 20px;
 	text-align: center;
@@ -4104,5 +4104,5 @@ body.landing #main {
 }
 
 #btnScrollToTop:hover {
-	background-color: #fff;
+	background-color: #707070;
 }
