--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,7 +115,16 @@ section {
 }
 
 
-/* CAROUSEL   */
+/* ============== CAROUSEL START ==============  */
+.testimonials {
+  background: #eee;
+  font-family: Tahoma;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding-top: 20px;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Lora:400,400i,700");
 
@@ -4192,16 +4201,7 @@ body.landing #main {
 	background-color: #707070;
 }
 
-
-body {
-  background: #eee;
-  font-family: Tahoma;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  padding-top: 20px;
-}
+/* CAROUSEL 2 START */
 .d-block, h2{
   color: #33475c;
   font-weight: 700;
@@ -4624,4 +4624,5 @@ p.testimonialFrom {
   font-weight: bold;
   color: #33475c;
 }
-/* ============== End Testimonial Flexbox ============= */
+
+/* ============== CAROUSEL START ============== */
