--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -166,6 +166,8 @@ textarea {
 
 /* STYLE TECBOS LOGO */
 .flex-box {
+	width: 100%;
+	height: 100%;
 	display: grid !important;
 	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 	grid-gap: 20px;
