Adjust CSS and HTML in line

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4111,47 +4111,75 @@ body.landing #main {
 }
 
 /* START TESTIMONIALS-CAROUSEL */
+#authorContainer {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	justify-content: space-around;
+	align-items: center;
+	gap: 60px;
+	padding: 60px;
+}
+
 .testimonial-container {
-  width: 60%;
-  overflow: hidden;
+	margin-top: 120px;
+	align-self: start;
+	display: grid;
+	gap: 30px;
 }
 
 .testimonial {
-  width: 100%;
-  display: none;
+	width: 100%;
+	display: none;
 	align-items: center;
 }
-.author-image {
-  max-width: 100%;
-  height: auto;
-  /* border-radius: 50%; */
-  margin-right: 20px; /* Adiciona um espaçamento à direita da imagem */
+
+/* .author-content {
+	animation: sobeSecao .6s ease-in-out forwards;
+	color: #707070;
+	grid-column: 2/-1;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+} */
+
+.about-text p {
+	text-align: justify;
+	font-size: 1.3rem;
+	grid-row: 2;
+	grid-column: 1/-1;
 }
-#authorContainer {
-  display: flex;
-  align-items: center; /* Alinha os elementos verticalmente no container */
+
+.author-image {
+	cursor: pointer;
+	grid-row: 2;
+	max-width: 100%;
+	border-radius: 4px;
+	filter: blur(0);
 }
 
 #authorNames {
+	color: #707070;
+	grid-column: 2/-1;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 	color: #0e6405;
-  display: flex;
-  justify-content: space-around; /* Distribui uniformemente os nomes dos autores */
-	flex-direction: column;
+	justify-content: space-around;
 }
 
 .testimonial.active {
-  display: block;
+	display: grid;
 }
+
 .author-name {
-  cursor: pointer;
-  padding: 10px;
-  /* border: 2px solid #0e6405; */
-  border-radius: 5px;
-  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+	cursor: pointer;
+	padding: 10px;
+	/* border: 2px solid #0e6405; */
+	border-radius: 5px;
+	transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
 .author-name:hover {
-  background-color: #84C873;
-  color: #fff;
+	background-color: #84C873;
+	color: #fff;
 }
+
 /* END TESTIMONIALS-CAROUSEL */
